a30: Add RR's props in device's overlay
Signed-off-by: Enzo Vieira | YukoSky <daffetyxd@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -1051,6 +1051,45 @@
         <item>7</item>
         <item>0</item>
     </integer-array>
+    
+    <!-- Whether the device supports Smart Pixels --> 
+    <bool name="config_supportSmartPixels">true</bool>
+    
+    <!-- Whether device has physical tri state switch -->
+    <bool name="config_hasAlertSlider">true</bool>
+    
+    <!-- Enable face auth when swiping security view  
+    for popup cameras-->
+    <bool name="config_faceAuthOnSecurityView">false</bool>
+  
+    <!-- Whether device has warp charging support -->
+    <bool name="config_hasWarpCharger">true</bool>
+  
+    <!-- Whether device has Dash charging support -->
+    <bool name="config_hasDashCharger">true</bool>
+  
+    <!-- Whether device has VOOC charging support -->
+    <bool name="config_hasVoocCharger">false</bool>
+  
+    <!-- Whether device supports variable refresh rate -->
+    <bool name="config_hasVariableRefreshRate">true</bool>
+  
+    <!-- Default setting for refresh rate
+    0 = Auto
+    1 = 60HZ
+    2 = 90Hz -->
+    <integer name="config_defaultVariableRefreshRateSetting">1</integer>
+  
+    <!-- If Smart charging supported by kernel and device sepolicy -->
+    <bool name="config_smartChargingAvailable">true</bool>
+    
+    <!-- SystemInfo Sys Nodes -->
+    <string name="config_sysCPUTemp">/sys/class/thermal/thermal_zone3/temp</string>
+    <string name="config_sysBatteryTemp">/sys/class/power_supply/battery/temp</string>
+    <string name="config_sysGPUFreq">/sys/kernel/gpu/gpu_clock</string>
+    <string name="config_sysGPULoad">/sys/kernel/gpu/gpu_busy</string>
+    <integer name="config_sysCPUTempMultiplier">10</integer>
+    <integer name="config_sysBatteryTempMultiplier">10</integer>
 
     <!-- Vibrator pattern for feedback about touching a virtual key -->
     <integer-array name="config_virtualKeyVibePattern">
